@@ -1,3 +1,10 @@
+2008-02-11  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (nma_menu_add_devices): don't put the Edit Wireless Networks item here
+		- (nma_context_menu_create): move the Edit Wireless Networks item here
+		- (nma_menu_add_edit_essid_item): remove
+
 2008-02-08  Tambet Ingo  <tambet@gmail.com>
 
 	* src/nm-gconf-wso-wpa-eap.c: Save to gconf which passwords we should have.
